# VaastuApp

./: Run_Vaastu_App.bat  app_run_bat.txt  main.py  pyproject.toml  requirements.txt
agents/: component_cleaner.py
core/: direction_math.py  pdf_parser.py  text_merger.py
prompts/: component_cleanup.yaml
tests/: llm_cleaner_test.py  llm_loader_test.py
utils/: csv_exporter.py  llm.py
